--- a/main/templates/main/partials/sidebar.html
+++ b/main/templates/main/partials/sidebar.html
@@ -1,7 +1,7 @@
 <div class="nk-sidebar">
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
-            <li class="nav-label" style="background-color: #68b97f; color:white;">Tableau de bord</li>
+            <li class="nav-label" style="background-color: #2dce89; color:white;">Tableau de bord</li>
             <li>
                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                     <i class="icon-speedometer menu-icon"></i><span class="nav-text">Tableau de bord</span>
@@ -11,7 +11,7 @@
                 </ul>
             </li>
 
-            <li class="nav-label" style="background-color: #68b97f; color:white;">Gestion du personnel</li>
+            <li class="nav-label" style="background-color: #2dce89; color:white;">Gestion du personnel</li>
             <li>
                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                     <i class="icon-user menu-icon"></i><span class="nav-text">Le personnel scolaire</span>
@@ -30,7 +30,7 @@
                 </ul>
             </li>
 
-            <li class="nav-label" style="background-color: #68b97f; color:white;">Administration</li>
+            <li class="nav-label" style="background-color: #2dce89; color:white;">Administration</li>
             <!-- <li>
                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">
                     <i class="icon-notebook menu-icon"></i><span class="nav-text">Administrateurs</span>
