--- a/school/templates/school/tutors/Tutors.html
+++ b/school/templates/school/tutors/Tutors.html
@@ -125,11 +125,11 @@
                             <div class="form-row">
                                 <div class="form-group col-md-4">
                                     <label>Nom <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Votre nom" data-parsley-minlength="2" parsley-trigger="change" required id="lastName" style="text-transform: uppercase;">
+                                    <input type="text" class="form-control" placeholder="Saisir le nom" data-parsley-minlength="2" parsley-trigger="change" required id="lastName" style="text-transform: uppercase;">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Prénoms <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Prénoms" data-parsley-minlength="2" parsley-trigger="change" required id="firstName" style="text-transform: capitalize;">
+                                    <input type="text" class="form-control" placeholder="Saisir les prénoms" data-parsley-minlength="2" parsley-trigger="change" required id="firstName" style="text-transform: capitalize;">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Sexe <span class="text-danger">*</span></label>
@@ -152,18 +152,18 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Pays de naissance <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Pays de naissance" data-parsley-minlength="3" parsley-trigger="change" required id="birthCountry" style="text-transform: uppercase;">
+                                    <input type="text" class="form-control" placeholder="Saisir Le pays naissance" data-parsley-minlength="3" parsley-trigger="change" required id="birthCountry" style="text-transform: uppercase;">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Ville de naissance <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Ville de naissance" data-parsley-minlength="1" parsley-trigger="change" required id="birthTown" style="text-transform: capitalize;">
+                                    <input type="text" class="form-control" placeholder="Saisir la ville de naissance" data-parsley-minlength="1" parsley-trigger="change" required id="birthTown" style="text-transform: capitalize;">
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="form-group col-md-4">
                                     <label>Nationalité <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Votre nationalité" data-parsley-minlength="1" parsley-trigger="change" required id="nationality" style="text-transform: uppercase;">
+                                    <input type="text" class="form-control" placeholder="Saisir la nationalité" data-parsley-minlength="1" parsley-trigger="change" required id="nationality" style="text-transform: uppercase;">
                                 </div>
                             </div>
 
@@ -173,25 +173,25 @@
                             <div class="row">
                                 <div class="form-group col-md-4">
                                     <label for="livingCountry">Pays de résidence <span class="text-danger">*</span></label>
-                                    <input type="text" name="livingCountry" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Entrez le pays" class="form-control" id="livingCountry" style="text-transform: uppercase;">
+                                    <input type="text" name="livingCountry" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Saisir le pays de résidence" class="form-control" id="livingCountry" style="text-transform: uppercase;">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="livingTown">Ville de résidence <span class="text-danger">*</span></label>
-                                    <input type="text" name="livingTown" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Entrez la ville" class="form-control" id="livingTown" style="text-transform: capitalize;">
+                                    <input type="text" name="livingTown" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Saisir la ville de résidence" class="form-control" id="livingTown" style="text-transform: capitalize;">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="livingAddress">Adresse <span class="text-danger">*</span></label>
-                                    <input type="text" name="livingAddress" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Entrez le quartier" class="form-control" id="livingAddress" style="text-transform: capitalize;">
+                                    <input type="text" name="livingAddress" data-parsley-minlength="2" parsley-trigger="change" required placeholder="Saisir l'adresse" class="form-control" id="livingAddress" style="text-transform: capitalize;">
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-4">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" data-parsley-minlength="2" parsley-trigger="change" placeholder="Entrez l'adresse email" class="form-control" id="email">
+                                    <label for="phoneNumber">Télépone (avec l'indicatif et sans +)</label>
+                                    <input type="tel" name="phoneNumber" data-parsley-minlength="11" parsley-trigger="change" required placeholder="Ex: 22800000000" class="form-control" id="phoneNumber">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="phoneNumber">Télépone (avec l'indicatif et sans +)</label>
-                                    <input type="tel" name="phoneNumber" placeholder="(000)-00-00-00-00-00" class="form-control" id="phoneNumber">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" data-parsley-minlength="2" parsley-trigger="change" placeholder="Saisir l'adresse email" class="form-control" id="email">
                                 </div>
                             </div>
 
@@ -201,11 +201,11 @@
                             <div class="row">
                                 <div class="form-group col-md-4">
                                     <label for="profession">Profession</label>
-                                    <input type="text" name="profession" data-parsley-minlength="2" parsley-trigger="change" placeholder="Entrez la profession" class="form-control" id="profession">
+                                    <input type="text" name="profession" data-parsley-minlength="2" parsley-trigger="change" placeholder="Saisir la profession" class="form-control" id="profession">
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="companyName">Employeur</label>
-                                    <input type="text" name="companyName" placeholder="Nom de l'entreprise" class="form-control" id="companyName">
+                                    <input type="text" name="companyName" placeholder="Saisir le nom de l'entreprise" class="form-control" id="companyName">
                                 </div>
                             </div>
 
