--- a/school/templates/school/inscriptions/inscriptions.html
+++ b/school/templates/school/inscriptions/inscriptions.html
@@ -69,6 +69,7 @@
                                     <td>{{ inscription.AcademicYear.wording }}</td>
                                     <td>
                                         <div class="button-list">
+                                            <button class="btn waves-effect waves-light btn-warning btn-sm text-white" onclick="GetInscriptionDetailsById('{{ inscription.id }}')" data-toggle="tooltip" title="Modifier"> <i class="mdi mdi-pencil-box-outline"></i> </button>
                                             <button class="btn waves-effect waves-light btn-danger btn-sm" onclick="deleteObject('{{ inscription.id }}')" data-toggle="tooltip" title="Supprimer"><i class="icon-trash"></i> </button>
                                         </div>
                                     </td>
@@ -102,12 +103,27 @@
                         <div class="col-md-12">
                             <div class="form-row">
                                 <div class="form-group col-md-4">
+                                    <label>Date de l'inscription</label>
+                                    <input type="date" class="form-control" placeholder="" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionDate">
+                                </div>
+                                <div class="form-group col-md-4">
                                     <label>Apprennant</label> <button type="button" class="btn btn-success waves-effect waves-light mb-1 text-right shadow-success ml-2 text-white btn-sm" onclick="openModalPopUpPage('/school/Students/')"><i class="mdi mdi-plus-outline"> ajouter</i></button>
                                     <select id="studentId" class="form-control" required="" data-parsley-required-message="Ce champs est requis.">
                                     </select>
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label>Niveau</label>
+                                    <label>Profil <span class="text-danger">*</span></label>
+                                    <select id="SchoolFeeDetailsProfileId" class="form-control" required="" data-parsley-required-message="Ce champs est requis.">
+                                        <option value ="" >Sélectionner...</option>
+                                        {%  for SchoolFeeProfile in SchoolFeesProfiles %}
+                                        <option value ="{{ SchoolFeeProfile.id }}" >{{ SchoolFeeProfile.wording }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-4">
+                                    <label>Niveau</label> <button type="button" class="btn btn-success waves-effect waves-light mb-1 text-right shadow-success ml-2 text-white btn-sm" onclick="openModalPopUpPage('/school/SchoolFees/')"><i class="mdi mdi-plus-outline"> ajouter</i></button>
                                     <select id="susGraduationLevelId" class="form-control" required="" data-parsley-required-message="Ce champs est requis.">
                                         <option value ="" >Sélectionner...</option>
                                         {%  for SusGraduationLevel in SusGraduationLevels %}
@@ -125,16 +141,31 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <label>Date de l'inscription</label>
-                                    <input type="date" class="form-control" placeholder="" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionDate">
-                                </div>
-                            </div>
 
                         </div>
                     </div>
-                    <div class="form-group text-right mb-0">
+
+                    <!-- School fee details Table by sus graduation level -->
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered zero-configuration table-sm" id="SusGraduationSchoolFeesDetailsTable">
+                            <thead>
+                                <tr>
+                                    <th class="d-none">Id</th>
+                                    <th>Niveau</th>
+                                    <th>Profil</th>
+                                    <th>Frais</th>
+                                    <th>Montant</th>
+                                    <th>Obligatoire</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="SusGraduationSchoolFeesDetailsDataList">
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="form-group text-right mb-0 mt-5">
                         <button class="btn btn-success shadow-success waves-effect waves-light mr-1 text-white" type="submit" id="inscriptionBtn">
                             <i class="mdi mdi-content-save"></i>                                           
                             Enregistrer
@@ -217,6 +248,79 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+
+
+<!-- Inscription informations -->
+<!-- Inscription informations -->
+<!-- Inscription informations -->
+
+<!--  Modal content for inscription informations -->
+<div class="modal fade bs-example-modal-lg" id="inscriptionInformationModal" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="myLargeModalLabel">Informations sur une inscription
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
+            <div class="modal-body form">
+                <!-- Inscription details -->
+                <div class="row">
+                    <div class="col-md-12 mb-5">
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label class="text-gray">Date</label>
+                                <input type="text" class="form-control" value="" readonly="readonly" placeholder="Date de l'inscription" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionInformationDate" style="text-transform: uppercase;">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label class="text-gray">Nom</label>
+                                <input type="text" class="form-control" value="" readonly="readonly" placeholder="Nom de l'apprenant" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionDetailsStudent" style="text-transform: uppercase;">
+                            </div>
+                            <div class="form-group col-md-2">
+                                <label>Profil</label>
+                                <input type="text" class="form-control" value="" readonly="readonly" placeholder="Profil" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionDetailsProfil" style="text-transform: capitalize;">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-4">
+                                <label>Niveau</label>
+                                <input type="text" class="form-control" value="" readonly="readonly" placeholder="Niveau" data-parsley-minlength="2" parsley-trigger="change" required id="inscriptionDetailsGraduation">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Classe</label>
+                                <input type="text" class="form-control" value="" readonly="readonly" placeholder="Classe" data-parsley-minlength="3" parsley-trigger="change" required id="inscriptionDetailsClasse" style="text-transform: uppercase;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Inscription school fee details Table -->
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered zero-configuration table-sm" id="inscriptionSchoolFeesDetailsTable">
+                        <thead>
+                            <tr>
+                                <th>Frais</th>
+                                <th>Montant</th>
+                            </tr>
+                        </thead>
+                        <tbody id="inscriptionSchoolFeesDetailsDataList">
+
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+<!-- End Inscription informations -->
+<!-- End Inscription informations -->
+<!-- End Inscription informations -->
+
 
 {% endblock content %}
 <!-- Scripts -->
