--- a/school/templates/school/students/StudentDetails.html
+++ b/school/templates/school/students/StudentDetails.html
@@ -76,15 +76,15 @@
                         <div class="col-lg-12 col-xl-12">
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs mb-3" role="tablist">
-                                <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#home8">Tuteurs <span><i class="ti-user"></i></span></a></li>
+                                <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#tutors">Tuteurs <span><i class="ti-user"></i></span></a></li>
                             </ul>
 
                             <div class="tab-content tabcontent-border">
-                                <div class="tab-pane fade show active" id="home8" role="tabpanel">
+                                <div class="tab-pane fade show active" id="tutors" role="tabpanel">
                                     <h4>Les Tuteurs</h4>
 
                                     <div class="d-flex justify-content-end">
-                                        <button type="button" class="btn btn-success waves-effect waves-light mb-4 text-right shadow-success ml-2 text-white" data-toggle="modal" data-target="#tutorModal"><i class="mdi mdi-plus-outline"></i>Ajouter</button>
+                                        <button type="button" class="btn btn-success waves-effect waves-light mb-4 text-right shadow-success ml-2 text-white" data-toggle="modal" data-target="#tutorModal" onclick="resetForm('tutorForm')"><i class="mdi mdi-plus-outline"></i>Ajouter</button>
                                     </div>
 
                                     <div class="table-responsive">
